--- a/io.ipynb
+++ b/io.ipynb
@@ -214,6 +214,275 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grade isA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if elif ladder\n",
+    "marks=90\n",
+    "if marks>85:\n",
+    "    grade='A' \n",
+    "elif marks>70:\n",
+    "    grade='B' \n",
+    "elif marks>60:\n",
+    "    Grade='C'  \n",
+    "elif marks>50:\n",
+    "      grade='D'\n",
+    "else:\n",
+    "     grade='f'     \n",
+    "print(f\"grade is{grade}\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What would you like to eate\n",
+      "menu\n",
+      "1. Pizza\n",
+      "2. momo\n",
+      "enter a number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# match case (not similar to switch case)\n",
+    "print(\"What would you like to eate\")\n",
+    "print(\"menu\")\n",
+    "print(\"1. Pizza\")\n",
+    "print(\"2. momo\")\n",
+    "print(\"enter a number\")\n",
+    "ch = int(input(\">>>\"))\n",
+    "match ch:\n",
+    "     case 1: \n",
+    "          print(\"Your order is Pizza \\n total amt = 400\")\n",
+    "     case 2:\n",
+    "          print(\"Your order is momo \\n total amt = 340\")\n",
+    "     case _:\n",
+    "          print(\"Invalid choice\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<string>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m<string>:10\u001b[1;36m\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested if else\n",
+    "un = input('enter a username')\n",
+    "pw = input('enter a password')\n",
+    "if un != 'admin':\n",
+    "       if un == 'admin':\n",
+    "             if pw == 'admin':\n",
+    "                print(\"welcome, admin\")\n",
+    "             else:\n",
+    "                print(\"wrong password\")   \n",
+    "        else:           \n",
+    "            print(\"Invalid username\") \n",
+    "else:\n",
+    "    print(\"enter valid details\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aliya\n",
+      "aliya\n",
+      "aliya\n",
+      "aliya\n",
+      "aliya\n",
+      "aliya\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    print(\"aliya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "w\n",
+      "o\n",
+      "r\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using loop\n",
+    "a = \"hello word\"\n",
+    "for x in a:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "7\n",
+      "10\n",
+      "13\n",
+      "16\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21,3):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(31):\n",
+    "    if i%2!= 0:\n",
+    "          print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 2 (3273865747.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(i)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 2\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1772773303.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[28], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    i = 0\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "# whileloop\n",
+    "i=0\n",
+    "while i<= 100:\n",
+    "  print(\"I can do it\")\n",
+    "  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
