--- a/io.ipynb
+++ b/io.ipynb
@@ -277,32 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<string>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m<string>:10\u001b[1;36m\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nested if else\n",
     "un = input('enter a username')\n",
     "pw = input('enter a password')\n",
     "if un != 'admin':\n",
-    "       if un == 'admin':\n",
-    "             if pw == 'admin':\n",
-    "                print(\"welcome, admin\")\n",
-    "             else:\n",
-    "                print(\"wrong password\")   \n",
-    "        else:           \n",
-    "            print(\"Invalid username\") \n",
-    "else:\n",
-    "    print(\"enter valid details\")"
+    "      if un == 'admin':\n",
+    "         if pw == 'admin':\n",
+    "            print(\"welcome, admin\")\n",
+    "         else:\n",
+    "            print(\"wrong password\")   \n",
+    "      else:           \n",
+    "            print(\"Invalid username\")\n",
+    "   else;         \n",
+    "      print(\"enter valid details\")"
    ]
   },
   {
@@ -479,6 +470,27 @@
     "  print(\"I can do it\")\n",
     "  \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10]\n",
+    "lst= []\n",
+    "for i in a:\n",
+    "       lst.append(i**2)\n",
+    "print(lst)"
    ]
   },
   {
