--- a/list.ipynb
+++ b/list.ipynb
@@ -237,6 +237,114 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10]\n",
+    "lst= []\n",
+    "for i in a:\n",
+    "       lst.append(i**2)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [2,4,6,8,10]\n",
+    "square = [i**2 for i in num]\n",
+    "print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 50, 10, 34, 54, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,4,3,5,8,50,10,34,23,54,12]\n",
+    "even_nums = [num for num in x if num%2==0]\n",
+    "print(even_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mango' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m [mango,banana,orange,apple]\n\u001b[0;32m      2\u001b[0m i \u001b[38;5;241m=\u001b[39m [length \u001b[38;5;28;01mfor\u001b[39;00m length \u001b[38;5;129;01min\u001b[39;00m i \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(i)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mango' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = [mango,banana,orange,apple]\n",
+    "length = [length for length in x if num%2==0] \n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HELO', 'MY', 'NAME', 'IS', 'JOY']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['helo','my','name','is','joy']\n",
+    "lst = [i.upper() for i in words]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
