--- a/io.ipynb
+++ b/io.ipynb
@@ -84,7 +84,7 @@
     "name = \"kavya\"\n",
     "age = 25\n",
     "job = \"SDE 1\"\n",
-    "print(\"Name:\", name,\", Age:\",age,\" ,JOB:\", job)"
+    "print(\"Name:\",name,\", Age:\",age,\" ,JOB:\", job)"
    ]
   },
   {
@@ -173,6 +173,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "238.0\n",
+      "simpke interest calculator\n",
+      "principle=14000\n",
+      "rate=1.7\n",
+      "time=10\n",
+      "simple interest=238.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 14000\n",
+    "r = 1.7\n",
+    "t = 10\n",
+    "si = p*r*t/1000\n",
+    "print(si)\n",
+    "print(\"simpke interest calculator\")\n",
+    "print(f'principle={p}')\n",
+    "print(f'rate={r}')\n",
+    "print(f'time={t}')\n",
+    "print(f'simple interest={si}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -189,6 +220,26 @@
     "fav_movie = input(\"Plz enter fav movie\")\n",
     "print(fav_movie)\n",
     "print(\"you may like it\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kalki\n",
+      "you are the best father\n"
+     ]
+    }
+   ],
+   "source": [
+    "fav_movie = input(\"please enter the fav movie\")\n",
+    "print(fav_movie)\n",
+    "print(\"you are the best father\")"
    ]
   },
   {
@@ -260,7 +311,7 @@
    ],
    "source": [
     "# match case (not similar to switch case)\n",
-    "print(\"What would you like to eate\")\n",
+    "print(\"What would you like to eat\")\n",
     "print(\"menu\")\n",
     "print(\"1. Pizza\")\n",
     "print(\"2. momo\")\n",
@@ -277,9 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid username\n"
+     ]
+    }
+   ],
    "source": [
     "# nested if else\n",
     "un = input('enter a username')\n",
@@ -292,7 +351,7 @@
     "            print(\"wrong password\")   \n",
     "      else:           \n",
     "            print(\"Invalid username\")\n",
-    "   else;         \n",
+    "else:      \n",
     "      print(\"enter valid details\")"
    ]
   },
@@ -317,6 +376,35 @@
    "source": [
     "for i in range(6):\n",
     "    print(\"aliya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n",
+      "aryan\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(12):\n",
+    "    print('aryan')"
    ]
   },
   {
@@ -468,6 +556,7 @@
     "i=0\n",
     "while i<= 100:\n",
     "  print(\"I can do it\")\n",
+    "  print(i)\n",
     "  \n",
     "\n"
    ]
@@ -491,6 +580,32 @@
     "for i in a:\n",
     "       lst.append(i**2)\n",
     "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8]\n",
+      "[8, 64]\n",
+      "[8, 64, 125]\n",
+      "[8, 64, 125, 216]\n",
+      "[8, 64, 125, 216, 512]\n",
+      "[8, 64, 125, 216, 512, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [2,4,5,6,8,10]\n",
+    "lst = []\n",
+    "for i in x:\n",
+    "    lst.append(i**3)\n",
+    "    print(lst)"
    ]
   },
   {
