--- a/list.ipynb
+++ b/list.ipynb
@@ -280,6 +280,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 64, 125, 216, 512]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num =[2,4,5,6,8]\n",
+    "cube = [i**3 for i in num]\n",
+    "print(cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -299,42 +318,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mango' is not defined",
+     "ename": "TypeError",
+     "evalue": "not all arguments converted during string formatting",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m [mango,banana,orange,apple]\n\u001b[0;32m      2\u001b[0m i \u001b[38;5;241m=\u001b[39m [length \u001b[38;5;28;01mfor\u001b[39;00m length \u001b[38;5;129;01min\u001b[39;00m i \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(i)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mango' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmango\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbanana\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m num \u001b[38;5;241m=\u001b[39m [num \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m x \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x)\n",
+      "\u001b[1;31mTypeError\u001b[0m: not all arguments converted during string formatting"
      ]
     }
    ],
    "source": [
-    "x = [mango,banana,orange,apple]\n",
-    "length = [length for length in x if num%2==0] \n",
-    "print(i)"
+    "x = ['mango','banana','orange','apple']\n",
+    "num = [num for num in x if num%2==0] \n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['HELO', 'MY', 'NAME', 'IS', 'JOY']\n"
+      "['HELLO', 'MY', 'NAME', 'IS', 'JOY']\n"
      ]
     }
    ],
    "source": [
-    "words = ['helo','my','name','is','joy']\n",
+    "words = ['hello','my','name','is','joy']\n",
     "lst = [i.upper() for i in words]\n",
     "print(lst)"
    ]
