--- a/aliya.ipynb
+++ b/aliya.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "200"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,23 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8330"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = 10\n",
-    "b = 20\n",
-    "name = \"Aliya\"\n",
-    "city = \"lucknow\""
+    "245 * 34"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "a = 10\n",
+    "b = 20\n",
+    "name = \"Aliya\"\n",
+    "city = \"lucknow\"\n",
+    "print(a,b)"
    ]
   },
   {
@@ -55,13 +75,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,14 +108,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90\n",
+      "16\n",
+      "24\n",
+      "5.0\n",
+      "80\n",
+      "5\n",
+      "0\n",
+      "160000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# - + / * // % **\n",
+    "a = 20\n",
+    "b = 4\n",
+    "print(a-b)\n",
+    "print(a+b)\n",
+    "print(a/b)\n",
+    "print(a*b)\n",
+    "print(a//b) #floor division\n",
+    "print(a%b) #remainder\n",
+    "print(a**b) #a to the power of y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n",
       "30\n",
       "10\n"
      ]
@@ -113,7 +160,7 @@
     "c = a + b\n",
     "c = c + 30\n",
     "c += 30\n",
-    "c -= 10\n",
+    "c -= 30\n",
     "print(c)\n",
     "print(b)\n",
     "print(a)"
@@ -168,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +338,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,3,5,7,9,13,15,17,19]\n",
+    "for i in x:\n",
+    "    if i == 20:\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +382,7 @@
     "name = \"aliya\"\n",
     "for i in name:\n",
     "    if i == \"y\":\n",
-    "     break\n",
+    "        break\n",
     "print(i,end=\"\")"
    ]
   },
@@ -336,25 +412,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. k\n",
-      "1. h\n",
-      "2. u\n",
-      "3. s\n",
-      "4. h\n",
-      "5. i\n"
+      "0.k\n",
+      "1.h\n",
+      "2.u\n",
+      "3.s\n",
+      "4.h\n",
+      "5.i\n"
      ]
     }
    ],
    "source": [
     "for i, v in enumerate(\"khushi\"):\n",
-    "    print(f'{i}. {v}')"
+    "    print(f'{i}.{v}')"
    ]
   },
   {
@@ -364,27 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3474000773.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[14], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(i)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aliya', 'khushi', 'sparsh', 'aryan']\n",
+      "['aliya', 'khushi', 'sparsh', 'aryan']\n",
+      "['aliya', 'khushi', 'sparsh', 'aryan']\n",
+      "['aliya', 'khushi', 'sparsh', 'aryan']\n"
      ]
     }
    ],
    "source": [
     "name = ['aliya','khushi','sparsh','aryan']\n",
-    "for \n",
-    "    print(i)"
+    "for i,v in enumerate(name):\n",
+    "    print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +470,15 @@
      "output_type": "stream",
      "text": [
       "0.pen\n",
-      "1.pencil\n"
+      "1.pencil\n",
+      "2.eraser\n"
      ]
     }
    ],
    "source": [
     "name = ['pen','pencil','eraser']\n",
-    "for i,v in enumerate(items):\n",
-    "    if i == 2:\n",
+    "for i,v in enumerate(name):\n",
+    "    if i == 3:\n",
     "        break \n",
     "    print(f'{i}.{v}')"
    ]
