--- a/aliya.ipynb
+++ b/aliya.ipynb
@@ -95,6 +95,7 @@
    ],
    "source": [
     "# + - * / % // **\n",
+    "# airthmetic oprator\n",
     "x = 10\n",
     "y = 3\n",
     "print(x + y)\n",
@@ -104,6 +105,26 @@
     "print(x % y) # remainder\n",
     "print(x // y) # floor division\n",
     "print(x ** y) # x to the power of y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "437893890380859375"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15**15"
    ]
   },
   {
@@ -140,35 +161,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "100\n",
       "70\n",
-      "30\n",
-      "10\n"
+      "100\n",
+      "200\n",
+      "20.0\n",
+      "2.0\n",
+      "1024.0\n",
+      "4.0\n"
      ]
     }
    ],
    "source": [
     "# = += -= *= /= %= //= **=\n",
-    "a = 10\n",
-    "b = a + 20\n",
-    "c = a + b\n",
-    "c = c + 30\n",
-    "c += 30\n",
-    "c -= 30\n",
+    "# assignment operator\n",
+    "a = 40 # basic assignment operator\n",
+    "b = 30\n",
+    "a = a+b\n",
+    "# airthmetic assignment operators\n",
+    "a += b\n",
+    "print(a)\n",
+    "a -= b\n",
+    "print(a)\n",
+    "c = a+b\n",
     "print(c)\n",
-    "print(b)\n",
-    "print(a)"
+    "x = 20\n",
+    "y = 10\n",
+    "x *= y\n",
+    "print(x)\n",
+    "x /= y\n",
+    "print(x)\n",
+    "x //= y\n",
+    "print(x)\n",
+    "x **= y\n",
+    "print(x)\n",
+    "x %= y\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +225,10 @@
     }
    ],
    "source": [
+    "# comparison operator\n",
+    "# > < >= <= != ==\n",
+    "a = 50\n",
+    "b = 60\n",
     "print(a > b)\n",
     "print(a < b)\n",
     "print(a >= b)\n",
@@ -215,6 +259,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logical operator\n",
+    "# and or not\n",
+    "print(a > b and a < b)\n",
+    "print(a > b or a < b)\n",
+    "print(a < b and a > b)\n",
+    "print(a < b or a > b)\n",
+    "print(not a > 2)\n",
+    "print(not(a > b and a < b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -222,38 +295,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n",
-      "False\n",
-      "False\n",
+      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "print(a > b and a < b)\n",
-    "print(a > b and a < b)\n",
-    "print(a < b and a > b)\n",
-    "print(a < b and a > b)\n",
-    "print(not(a > b and a < b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
+    "# membership oprators\n",
+    "# in not in\n",
     "name = \"aliya\"\n",
-    "print(\"a\" in name)"
+    "print(\"a\" in name)\n",
+    "print(\"l\" in name)\n"
    ]
   },
   {
@@ -434,11 +486,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -482,20 +529,6 @@
     "        break \n",
     "    print(f'{i}.{v}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
