#condition of python

--- a/conditions.ipynb
+++ b/conditions.ipynb
@@ -17,19 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a is greater then 5\n",
-      "hi\n",
-      "bye\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = -3\n",
     "a > 5 # block of code\n",
@@ -40,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "very good, you have know how to type long word\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = input(\"enter the long word\")\n",
     "if len(word)> 10:\n",
@@ -59,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📃not:100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = (12,21,32)\n",
     "if sum(n)>100:\n",
@@ -80,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "grade is B\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if elif ladder\n",
     "marks = 80\n",
@@ -109,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c24 is the largest\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find the largest no.\n",
     "a = 10\n",
@@ -142,7 +100,93 @@
     "# nested if else\n",
     "un = input('enter the username')\n",
     "pw = input('enter the password')\n",
-    "if un is"
+    "if un != '' and pw !='':\n",
+    "    if un =='admin':\n",
+    "        if pw =='admin':\n",
+    "            print(\"📃 welcome, Admin\")\n",
+    "        else:\n",
+    "            print(\"📃storng Password\")\n",
+    "    else:\n",
+    "        print(\"📃Invalid username\")\n",
+    "else:\n",
+    "    print(\"📃Enter valid details📃\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# short hand if else\n",
+    "a = 10\n",
+    "print(\"📃\") if a >=10 else print(\"❌\")\n",
+    "print(\"📃\" if a >=10 else \"❌\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what would you like to eat\n",
+      "menu\n",
+      "1. pizza🍕\n",
+      "2. momo\n",
+      "3. pasta🍝\n",
+      "enter a number: \n",
+      "Invalid choice\n"
+     ]
+    }
+   ],
+   "source": [
+    "# match case (not similar to switch case)\n",
+    "print(\"what would you like to eat\")\n",
+    "print(\"menu\")\n",
+    "print(\"1. pizza🍕\")\n",
+    "print(\"2. momo\")\n",
+    "print(\"3. pasta🍝\")\n",
+    "print(\"4. sandwich\")\n",
+    "print(\"enter a number: \")\n",
+    "ch = int(input(\">>>\"))\n",
+    "match ch:\n",
+    "    case 1:\n",
+    "        print(\"your order is pizza🍕 \\ntotal amt = 400\")\n",
+    "    case 2:\n",
+    "        print(\"your order is momo \\ntotal amt = 199\")\n",
+    "    case 3:\n",
+    "        print(\"your order is pasta🍝 \\n amt = 299\")\n",
+    "    case 4:\n",
+    "        print(\"your order is sandwich \\ntotal amt = 99\")\n",
+    "    case _:\n",
+    "        print(\"Invalid choice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"what would you like to eat\")\n",
+    "print(\"menu\")\n",
+    "print(\"1. pizza🍕\")\n",
+    "print(\"2. pasta\")\n",
+    "print(\"3. momo\")\n",
+    "print(\"enter a number:\")\n",
+    "ch = int(input(\">>>\"))\n",
+    "if ch == 1:\n",
+    "    print(\"your order is pizza🍕 \\ntotal amt = 400\")\n",
+    "elif ch == 2:\n",
+    "    print(\"your order is pasta \\ntotal amt = 350\")\n",
+    "elif ch == 3:\n",
+    "    print(\"your order is momo \\ntotal amt = 99\")\n",
+    "else:\n",
+    "    print(\"INVALID CHOICES\")"
    ]
   }
  ],
