--- a/function.ipynb
+++ b/function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,39 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method Random.choice of <random.Random object at 0x000001E4218C1E40>>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "choice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['12', '32', '3', '32', '13', '23']\n",
-      "your number is:\n",
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = ['12','32','3','32','13','23']\n",
     "print(data)\n",
@@ -53,39 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(randint(1,6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Sample larger than population or is negative",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sample, choices\n\u001b[1;32m----> 2\u001b[0m out \u001b[38;5;241m=\u001b[39m sample(data,\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m*\u001b[39mout) \u001b[38;5;66;03m# * here is a trick to unpack the list\u001b[39;00m\n\u001b[0;32m      4\u001b[0m out2 \u001b[38;5;241m=\u001b[39m choices(data, k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\ARYAN\\miniconda3\\Lib\\random.py:430\u001b[0m, in \u001b[0;36mRandom.sample\u001b[1;34m(self, population, k, counts)\u001b[0m\n\u001b[0;32m    428\u001b[0m randbelow \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_randbelow\n\u001b[0;32m    429\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m k \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m n:\n\u001b[1;32m--> 430\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSample larger than population or is negative\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    431\u001b[0m result \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m*\u001b[39m k\n\u001b[0;32m    432\u001b[0m setsize \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m21\u001b[39m        \u001b[38;5;66;03m# size of a small set minus size of an empty list\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: Sample larger than population or is negative"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import sample, choices\n",
     "out = sample(data,10)\n",
@@ -96,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,37 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-07-26 12:20:34.430452\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(datetime.now())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-07-26\n",
-      "2024-07-26\n",
-      "2024-07-26 12:25:40.101286\n",
-      "26/07/2024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# date\n",
     "date = datetime.date(datetime.now())\n",
@@ -150,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,18 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current location\n",
-      "c:\\Users\\ARYAN\\OneDrive\\문서\\PYTHON DATA SCIENCE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"current location\")\n",
     "print(os.getcwd())"
@@ -178,25 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list all files\n",
-      ":.git\n",
-      ":aliya.ipynb\n",
-      ":condition.ipynb U\n",
-      ":function.ipynb\n",
-      ":list.ipynb\n",
-      ":pattern1.py\n",
-      ":pattern2.py\n",
-      ":string.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"list all files\")\n",
     "content = os.listdir()\n",
@@ -206,43 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":AMD\n",
-      ":Common Files\n",
-      ":desktop.ini\n",
-      ":Git\n",
-      ":Google\n",
-      ":HP\n",
-      ":HPCommRecovery\n",
-      ":HPPrintScanDoctor\n",
-      ":Internet Explorer\n",
-      ":McAfee\n",
-      ":Microsoft\n",
-      ":Microsoft Office\n",
-      ":Microsoft Office 15\n",
-      ":Microsoft OneDrive\n",
-      ":Microsoft Update Health Tools\n",
-      ":ModifiableWindowsApps\n",
-      ":MySQL\n",
-      ":Online Services\n",
-      ":Uninstall Information\n",
-      ":Windows Defender\n",
-      ":Windows Mail\n",
-      ":Windows Media Player\n",
-      ":Windows NT\n",
-      ":Windows Photo Viewer\n",
-      ":Windows Sidebar\n",
-      ":WindowsApps\n",
-      ":WindowsPowerShell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "content= os.listdir(\"c:/program files\")\n",
     "for item in content:\n",
@@ -251,43 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📃AMD\n",
-      "📃Common Files\n",
-      "📃desktop.ini\n",
-      "📃Git\n",
-      "📃Google\n",
-      "📃HP\n",
-      "📃HPCommRecovery\n",
-      "📃HPPrintScanDoctor\n",
-      "📃Internet Explorer\n",
-      "📃McAfee\n",
-      "📃Microsoft\n",
-      "📃Microsoft Office\n",
-      "📃Microsoft Office 15\n",
-      "📃Microsoft OneDrive\n",
-      "📃Microsoft Update Health Tools\n",
-      "📃ModifiableWindowsApps\n",
-      "📃MySQL\n",
-      "📃Online Services\n",
-      "📃Uninstall Information\n",
-      "📃Windows Defender\n",
-      "📃Windows Mail\n",
-      "📃Windows Media Player\n",
-      "📃Windows NT\n",
-      "📃Windows Photo Viewer\n",
-      "📃Windows Sidebar\n",
-      "📃WindowsApps\n",
-      "📃WindowsPowerShell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "content = os.listdir(\"c:/program files\")\n",
     "for item in content:\n",
@@ -305,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.make"
+    "os.makedirs"
    ]
   },
   {
@@ -324,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,19 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "475\n",
-      "469\n",
-      "795\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "adder()\n",
     "adder()\n",
@@ -358,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,34 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "adder(10,12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3698\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x =1299\n",
     "y = 2399\n",
@@ -405,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,20 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30000.0, 230000.0)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = 200000\n",
     "r = 1.5\n",
@@ -440,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,18 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1256.0\n",
-      "2461.76\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = 10\n",
     "area_sphere(r)\n",
@@ -472,19 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n",
-      "5538.96\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ans = adder(15, 6)\n",
     "print(ans)\n",
@@ -494,18 +284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "total words:9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# waf to count the number of words in a sentence\n",
     "def word_count(sentence):\n",
@@ -518,6 +299,285 @@
     "sentence = \"this is a long sentence with many words, okay?\"\n",
     "size = word_count(sentence)\n",
     "print(f'total words:{size}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# required positional parameter\n",
+    "def multiplier(a,b,c,d):\n",
+    "    ans = a*b*c*d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 20\n",
+    "b = 10\n",
+    "c = 30\n",
+    "d = 50\n",
+    "multiplier(a,b,c,d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier(1,2,3,4))\n",
+    "print(multiplier(a=2,b=3,c=4,d=5)) # keyword argument\n",
+    "print(multiplier(b=4,a=3,c=1,d=5))# keyword argument in any order\n",
+    "print(multiplier(1,2,c=4,d=5)) # mix of position and keyword argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default parameter\n",
+    "def multiplier_v2(a,b,c,d=1):\n",
+    "    ans = a*b*c*d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier_v2(1,2,3,4))\n",
+    "print(multiplier_v2(1,2,3)) #d is optional(default value = 1)\n",
+    "print(multiplier_v2(1,2,3,d=4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplier_v3(a=1,b=1,c=1,d=1):\n",
+    "    ans = a*b*c*d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier_v3())\n",
+    "print(multiplier_v3(10))\n",
+    "print(multiplier_v3(b=10))\n",
+    "print(multiplier_v3(10,20))\n",
+    "print(multiplier_v3(10,c=20))\n",
+    "print(multiplier_v3(10,20,30,40))\n",
+    "print(multiplier_v3(10,20,d=30,c=40))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"hello word\".split(sep='o')# default parameter example in predefine function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable length argument\n",
+    "print()\n",
+    "print(1)\n",
+    "print(1,2,3,4)\n",
+    "print(1,2,3,4,5,6,7,8,9,0,1, sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stats(*nums,action='mean'):\n",
+    "    if action == 'mean':\n",
+    "        total = sum(nums)\n",
+    "        size = len(nums)\n",
+    "        return total / size\n",
+    "    elif action == 'sum':\n",
+    "        return sum(nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(stats(1,2,3,4,5,6,7,8,9))\n",
+    "print(stats(22,33,44,55,66))\n",
+    "print(stats(4,5,1,2))\n",
+    "print(stats(4,5,1,2, action='sum'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when defining a function\n",
+    "- only one parameter can be variable length parameter(*args)\n",
+    "- only one parameter can be variable keyword parameter(**kwargs)\n",
+    "- default parameter should be at the end "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable length argument\n",
+    "def person(**details):\n",
+    "    print(\"details of the person\")\n",
+    "    for k,v in details.items():\n",
+    "        print(f\"{k:10}|{v}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person(name = 'ekta')\n",
+    "person(name = 'khushi', age=18, city='mumbai', country='india', gender='female')\n",
+    "person(name = 'shivi', age=20,city='kanpur',job='HR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lambda expression: simple equation as functions\n",
+    "\n",
+    "mathematical function:\n",
+    "\n",
+    "f(x) = x**2+1\n",
+    "g(x,y) = x** 2 + y** 2 + 1\n",
+    "lambda expression:\n",
+    "\n",
+    "f = lambda x: x**2 + 1\n",
+    "g = lambda x, y: x**2 + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda x: x**2 + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f(10))\n",
+    "print(f(2))\n",
+    "print(f(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = lambda x, y: x**2 + y**2 +1\n",
+    "print(g(2,3))\n",
+    "print(g(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [1,2,3,4,5,6,7,8,9,10]\n",
+    "f = lambda x: x**2 +1\n",
+    "list(map(f, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple(map(f, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = [1,2,3,4,5,6,7,8,9,10]\n",
+    "data2 = [10,20,30,40,50,60,70,80,90,11]\n",
+    "g = lambda x, y: x**2 + y**2 + 1\n",
+    "list(map(g, data1, data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(map(g,data1, data2))"
    ]
   },
   {
