--- a/conditions.ipynb
+++ b/conditions.ipynb
@@ -25,7 +25,7 @@
     "a > 5 # block of code\n",
     "print(\"a is greater then 5\")\n",
     "print('hi')\n",
-    "print('bye')\n"
+    "print('bye')"
    ]
   },
   {
