--- a/loops.ipynb
+++ b/loops.ipynb
@@ -313,29 +313,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a)*(i) + 45\n",
-      "(a)*(i) + 60\n",
-      "(a)*(i) + 75\n",
-      "(a)*(i) + 90\n",
-      "(a)*(i) + 105\n",
-      "(a)*(i) + 120\n",
-      "(a)*(i) + 135\n",
-      "(a)*(i) + 150\n",
-      "(a)*(i) + 165\n"
+      "(5)*(i) + 25\n",
+      "(5)*(i) + 30\n",
+      "(5)*(i) + 35\n",
+      "(5)*(i) + 40\n",
+      "(5)*(i) + 45\n",
+      "(5)*(i) + 50\n",
+      "(5)*(i) + 55\n"
      ]
     }
    ],
    "source": [
     "a = 15\n",
-    "for i in range(3,12):\n",
-    "    print(f'(a)*(i) + {a*i}')"
+    "for i in range(5,12):\n",
+    "    print(f'(5)*(i) + {5*i}')"
    ]
   },
   {
